Antes de Procedimiento Almacenado

--- a/LimenawebApp/Views/Commercial/Activityon.cshtml
+++ b/LimenawebApp/Views/Commercial/Activityon.cshtml
@@ -1365,6 +1365,7 @@ imageObj.src = "@objeto.fsource";
                 </div>
 
                 <input type="text" id="idvisita" hidden value="@ViewBag.idvisita" />
+                <input type="text" id="idvisitaReal" hidden value="@ViewBag.idvisitareal" />
                 <!--sales monitor-->
     
                 <div class="row">
